# supermarket

./: BackupRestore.c  BackupRestore.h  CMakeLists.txt  ChangeGoodsInfo.c  ChangeGoodsInfo.h  DailySum.c  DailySum.h  FindGoods.c  FindGoods.h  README.md  SoldOut.c  SoldOut.h  StockTaking.c  StockTaking.h  VIP.c  VIP.h  admin.c  admin.h  fx.c  input.c  input.h  main.c  output.c  output.h  setdiscount.c  setdiscount.h  structandfx.h
